Fixing loader on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -1354,7 +1354,7 @@ footer .foot-info .foot-details{
     justify-content: center;
     align-items: center;
 	position: fixed;
-	top: 5px;
+	top: 150px;
     width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
